taking transition of bottompanel off to fix status z-index, turning transform of thumbnail off, increasing hit area of arrows

--- a/mirador-custom.css
+++ b/mirador-custom.css
@@ -37,7 +37,7 @@
   background-color: #F1F1F1;
   padding-bottom: 10px;
   height: 105px;
-  transition: transform 0.2s ease;
+  transition: none;
 }
 
 .mirador-container .panel-thumbnail-view {
@@ -161,6 +161,7 @@
 
 .mirador-container .panel-thumbnail-view ul.panel-listing-thumbs li img:hover {
   border: 2px solid #80104E;
+  transform: none;
 }
 
 .mirador-container .mirador-pan-zoom-controls {
@@ -179,4 +180,9 @@
   left: 45%;
   top: 40%;
   font-family: 'Ideal Sans';
+}
+
+.mirador-container .mirador-osd-next, .mirador-container .mirador-osd-previous {
+    padding: 25px;
+    margin-top: -80px;
 }
